@startuml
class IteradorCircularSE <T> {
    + IteradorCircularSE(primero:ElementoSE <T>, tamaño:int)
    + hasNext():boolean
    + next():T
}
interface MiIterador <T> {
    + hasNext():boolean
    + next():T
}
class ListaCircularSE <T extends Comparable<T>> {
    # primero:ElementoSE <T>
    # ultimo:ElementoSE <T>
    # tamaño:int
    + ListaCircularSE()
    + add(dato:T):void
    + get(dato:T):void
    + del (dato:T):T
    + isEmpty():boolean
    + getSize():int
    + getIterador():MiIterador <T>
    + vaciar():void
    + existe(dato:T):boolean
    + obtenerPorPosicion(puesto:int):T
    + cambiarEnPosicion(puesto:int,nuevoDato:T):void
    + mostrarLista():String
}
interface Lista <T extends Comparable<T>> {
    + add(dato:T):void
    + get(dato:T):void
    + del (dato:T):void
    + isEmpty():boolean
    + getSize():int
    + getIterador():MiIterador <T>
    + vaciar():void
    + existe()(dato:T):boolean
    + obtenerPorPosicion(puesto:int):T
    + cambiarEnPosicion(puesto:int, nuevoDato:T):void
    + mostrarLista():String
    }
class ElementoSE <T> {
    # dato:T
    # siguiente: ElementoSE <T>
    + ElementoSE(dato:T)
}
IteradorCircularSE .right.|> MiIterador:  implements
ListaCircularSE ..|> Lista : implements
ElementoSE *-- ListaCircularSE: Compose

note right of ListaCircularSE::add
    *Inserta al final*
    cerrando el ciclo
end note

note right of ListaCircularSE::del
    *Elimina por valor*
    reenlazando el ciclo
end note

note right of ListaCircularSE::existe
    *Recorre una vuelta*
    usando tamaño como límite
end note

note left of ListaCircularSE::obtenerPorPosicion
    *Acceso por índice*
end note

note left of ListaCircularSE::cambiarEnPosicion
    *Modifica por índice*
end note

note left of ListaCircularSE::mostrarLista
    *Muestra la lista*
    con formato circular
end note
@enduml